<resources>
    <string name="app_name">AID Uneducated DeafDumb</string>
    <string name="title_text">AID Uneducated DEAF-DUMB</string>
    <string name="slogan_text">we improve your DEAF-DUMB Learning</string>
    <string name="marks">Marks</string>
    <string name="english_alphabets_sign">English Alphabets Sign</string>
    <string name="counting_numbers">Counting Numbers Sign</string>
    <string name="family_members"><![CDATA[Family Members & People Sign]]></string>
    <string name="greetings">Greetings Sign</string>
    <string name="daysnames">Days Signs</string>
    <string name="time_signs">Time Signs</string>
    <string name="colorssign">Colors Signs</string>
    <string name="emotions_signs">Emotion Signs</string>
    <string name="start_quiz">START QUIZ</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mom">MOM</string>
    <string name="hello">Hello</string>
    <string name="good">Good</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="night">Night</string>
    <string name="thanks">Thanks</string>
    <string name="sorry">Sorry</string>
    <string name="goodbye">Goodbye</string>
    <string name="howareyou">How are you?</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="weekend">Weekend</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="yesterday">Yesterday</string>
    <string name="lastyear">Last Year</string>
    <string name="NextWeek">Next Week</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="voilet">Voilet</string>
    <string name="blue">Blue</string>
    <string name="orange">Orange</string>
    <string name="purple">Purple</string>
    <string name="green">Green</string>
    <string name="pink">Pink</string>
    <string name="yellow">Yellow</string>
    <string name="red">Red</string>
    <string name="please">Please</string>
    <string name="done">Done</string>
    <string name="love">Love</string>
    <string name="sad">Sad</string>
    <string name="angry">Angry</string>
    <string name="stop">Stop</string>
    <string name="water">Water</string>
    <string name="afraid">Afraid</string>
    <string name="more">More</string>
    <string name="nephew">Nephew</string>
    <string name="cousins">Cousin</string>
    <string name="grandmother">Grand Mother</string>
    <string name="grandfather">Grand Father</string>
    <string name="dad">Dad</string>
    <string name="daughter">Daughter</string>
    <string name="son">Son</string>
    <string name="aunt">Aunt</string>
    <string name="uncle">Uncle</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="start_quiz">START QUIZ</string>
</resources>
